# pix3lforge

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
resources/: Pix3lForge.rc  resources.qrc
src/: imageprocessor.cpp  imageprocessor.h  main.cpp  mainwindow.cpp  mainwindow.cpp.old  mainwindow.h  pix3ltheme.cpp  pix3ltheme.h
src/actions/: actionmanager.cpp  actionmanager.h
src/ai/: AIProviderFactory.cpp  AIProviderFactory.h  EnhancementPromptBuilder.cpp  EnhancementPromptBuilder.h  EnhancementResponseParser.cpp  EnhancementResponseParser.h  IAIProvider.h  ImageEncoder.cpp  ImageEncoder.h  RetryPolicy.h
src/ai/providers/: AnthropicProvider.cpp  AnthropicProvider.h  LMStudioProvider.cpp  LMStudioProvider.h  OpenAIProvider.cpp  OpenAIProvider.h  OpenRouterProvider.cpp  OpenRouterProvider.h
src/commands/: commandfactory.cpp  commandfactory.h  commandmanager.cpp  commandmanager.h  imagecommand.cpp  imagecommand.h
src/dialogs/: AIEnhancementDialog.cpp  AIEnhancementDialog.h  AISettingsDialog.cpp  AISettingsDialog.h  aboutdialog.cpp  aboutdialog.h  dialogmanager.cpp  dialogmanager.h  logviewerdialog.cpp  logviewerdialog.h
src/filters/: filterbase.h
src/logging/: logger.cpp  logger.h
src/model/: adjustmentparameters.h  imagedocument.cpp  imagedocument.h
src/preview/: previewmanager.cpp  previewmanager.h
src/settings/: settingsmanager.cpp  settingsmanager.h
src/view/: viewmanager.cpp  viewmanager.h
src/widgets/: propertiespanel.cpp  propertiespanel.h
